--- a/src/main/resources/patient/view/LogInLayout.fxml
+++ b/src/main/resources/patient/view/LogInLayout.fxml
@@ -10,18 +10,23 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="810.0" styleClass="blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="common.controllers.LogInController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="810.0" styleClass="blue_color" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patient.controllers.LogInController">
    <children>
       <Pane prefHeight="610.0" prefWidth="810.0" styleClass="blue_color">
          <children>
-            <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+            <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                <image>
                   <Image url="@../../icons/logo.png" />
                </image>
             </ImageView>
-            <Label layoutX="113.0" layoutY="372.0" text="TELELEPSIA" textFill="#ffffffd9">
+            <Label layoutX="113.0" layoutY="357.0" text="TELELEPSIA" textFill="#ffffffd9">
                <font>
                   <Font name="Ebrima" size="35.0" />
+               </font>
+            </Label>
+            <Label layoutX="135.0" layoutY="400.0" text="PATIENT - APP" textFill="#ffffffd9">
+               <font>
+                  <Font name="Ebrima" size="20.0" />
                </font>
             </Label>
          </children>
