--- a/src/main/resources/patient/view/RegistrationLayout.fxml
+++ b/src/main/resources/patient/view/RegistrationLayout.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
@@ -11,54 +10,53 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="common.controllers.RegistrationController">
+<AnchorPane stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patient.controllers.RegistrationController">
    <children>
       <Pane prefHeight="610.0" prefWidth="810.0" styleClass="blue_color">
          <children>
-            <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+            <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                <image>
                   <Image url="@../../icons/logo.png" />
                </image>
             </ImageView>
-            <Label layoutX="113.0" layoutY="372.0" text="TELELEPSIA" textFill="#ffffffd9">
+            <Label layoutX="113.0" layoutY="357.0" text="TELELEPSIA" textFill="#ffffffd9">
                <font>
                   <Font name="Ebrima" size="35.0" />
                </font>
             </Label>
             <Pane fx:id="registrationPane" layoutX="400.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="405.0" styleClass="white_color" stylesheets="@../../css/mainStyle.css">
                <children>
-                  <Label layoutX="90.0" layoutY="20.0" text="Registration">
+                  <Label layoutX="90.0" layoutY="42.0" text="Registration">
                      <font>
                         <Font name="Ebrima" size="30.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="80.0" prefHeight="35.0" prefWidth="240.0" promptText="User name" styleClass="text-field" unFocusColor="#00000080">
+                  <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="125.0" prefHeight="35.0" prefWidth="240.0" promptText="User name" styleClass="text-field" unFocusColor="#00000080">
                      <font>
                         <Font name="Ebrima" size="14.0" />
                      </font>
                   </JFXTextField>
-                  <JFXPasswordField fx:id="userPasswordField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="240.0" prefHeight="35.0" prefWidth="240.0" promptText="Password" unFocusColor="#00000080">
+                  <JFXPasswordField fx:id="userPasswordField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="285.0" prefHeight="35.0" prefWidth="240.0" promptText="Password" unFocusColor="#00000080">
                      <font>
                         <Font name="Ebrima" size="14.0" />
                      </font>
                   </JFXPasswordField>
-                  <JFXPasswordField fx:id="userRepeatPasswordField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="320.0" prefHeight="35.0" prefWidth="240.0" promptText="Repeat Password" unFocusColor="#00000080">
+                  <JFXPasswordField fx:id="userRepeatPasswordField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="365.0" prefHeight="35.0" prefWidth="240.0" promptText="Repeat Password" unFocusColor="#00000080">
                      <font>
                         <Font name="Ebrima" size="14.0" />
                      </font>
                   </JFXPasswordField>
-                  <JFXComboBox fx:id="userType" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="405.0" prefHeight="35.0" prefWidth="240.0" promptText="Type of user" styleClass="comboBox" unFocusColor="#00000080" visibleRowCount="3" />
-                  <JFXButton fx:id="registerButton" buttonType="RAISED" layoutX="90.0" layoutY="465.0" prefHeight="60.0" prefWidth="240.0" styleClass="starter_buttom" text="Create account">
+                  <JFXButton fx:id="registerButton" buttonType="RAISED" layoutX="90.0" layoutY="455.0" prefHeight="60.0" prefWidth="240.0" styleClass="starter_buttom" text="Create account">
                      <font>
                         <Font name="Ebrima Bold" size="20.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="goBackButton" layoutX="156.0" layoutY="550.0" onMouseClicked="#backToMenu" prefHeight="36.0" prefWidth="108.0" styleClass="starter_small_buttom" text="Go back" textFill="#4f90a5">
+                  <JFXButton fx:id="goBackButton" layoutX="156.0" layoutY="542.0" onMouseClicked="#backToMenu" prefHeight="36.0" prefWidth="108.0" styleClass="starter_small_buttom" text="Go back" textFill="#4f90a5">
                      <font>
                         <Font name="Ebrima" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="160.0" prefHeight="35.0" prefWidth="240.0" promptText="User email" unFocusColor="#0000007e">
+                  <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="90.0" layoutY="205.0" prefHeight="35.0" prefWidth="240.0" promptText="User email" unFocusColor="#0000007e">
                      <font>
                         <Font name="Ebrima" size="14.0" />
                      </font>
@@ -75,6 +73,11 @@
                   </JFXButton>
                </children>
             </Pane>
+            <Label layoutX="135.0" layoutY="400.0" text="PATIENT - APP" textFill="#ffffffd9">
+               <font>
+                  <Font name="Ebrima" size="20.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
